--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class="container">
 			<header class="fixedContainer">
-        <a href="#" id="logo"><img alt=""  src="images/opencharity.png"></a>
+        <a href="#" id="logo"><img alt=""  src="images/OpenCharity.png"></a>
             <!-- NAVIGATION-->
           <nav>
             <a href="#" id="menu-icon"></a>
@@ -77,7 +77,7 @@
           </div>
           <div class="col-1-3">
             <div class="collaborate">
-            <center><img src="images/slack.png" alt="" style="padding-bottom: 5px;">
+            <center><img src="images/Slack.png" alt="" style="padding-bottom: 5px;">
             <h4>WE COLLABORATE</h4>
             <div class="gi-text">
               <p>OpenCharity have a slack group for daily collaboration </p>
