--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   		<title>Open Charity</title>
   		<link rel="stylesheet" type="text/css" href="style/app.css">
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet'>
-      <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+      <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
 
       <!-- Linking Owl Carousel for the sliders -->
 
